models and controllers fine but need to fix context class and connection string web.config

--- a/HappyDaysOne/Views/Home/Index.cshtml
+++ b/HappyDaysOne/Views/Home/Index.cshtml
@@ -3,8 +3,14 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
+    <h1>Happy Days</h1>
+</div>
+<div class="row">
+    <h2>Welcome to Happy Days</h2>
+    <p class="lead">Happy Days is a powerful application for two types of users 
+    - the first can search their local area for available activities for their child and complete registration 
+    accordingly, the second can register their club and its available activities allowing children to be registered
+     for different classes</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
