stil working on roles and users,

--- a/HappyDaysOne/Views/Role/Create.cshtml
+++ b/HappyDaysOne/Views/Role/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model HappyDaysOne.Models
+﻿@model Microsoft.AspNet.Identity.EntityFramework.IdentityRole
 @{ 
     ViewBag.Title = "Add New Role";
 }
@@ -14,5 +14,6 @@
     @Html.EditorFor(m => m.Name)
     <input type="submit" value="Create Role" />
 }
+
 
 
