--- a/HappyDaysOne/Views/Role/Index.cshtml
+++ b/HappyDaysOne/Views/Role/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model HappyDaysOne.Models
+﻿@model IEnumerable<Microsoft.AspNet.Identity.EntityFramework.IdentityRole>
 @{
     ViewBag.Title = "Add Role";
 }
