made some progress with migrations - managed to update db

--- a/HappyDaysOne/Views/Clubs/Index.cshtml
+++ b/HappyDaysOne/Views/Clubs/Index.cshtml
@@ -32,10 +32,10 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.ContactFirstName)
+            @Html.DisplayFor(modelItem => item.FirstName)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.ContactLastName)
+            @Html.DisplayFor(modelItem => item.LastName)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.ContactPhNo)
