--- a/HappyDaysOne/Views/Children/Details.cshtml
+++ b/HappyDaysOne/Views/Children/Details.cshtml
@@ -11,19 +11,19 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.GuardianFirstName)
+            @Html.DisplayNameFor(model => model.FirstName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.GuardianFirstName)
+            @Html.DisplayFor(model => model.FirstName)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.GuardianLastName)
+            @Html.DisplayNameFor(model => model.LastName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.GuardianLastName)
+            @Html.DisplayFor(model => model.LastName)
         </dd>
 
         <dt>
