got routing sorted out through views/shared/layout

--- a/HappyDaysOne/Views/Activities/Details.cshtml
+++ b/HappyDaysOne/Views/Activities/Details.cshtml
@@ -11,11 +11,11 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Club.ContactFirstName)
+            @Html.DisplayNameFor(model => model.Club.FirstName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Club.ContactFirstName)
+            @Html.DisplayFor(model => model.Club.FirstName)
         </dd>
 
         <dt>
