--- a/HappyDaysOne/Views/Home/Contact.cshtml
+++ b/HappyDaysOne/Views/Home/Contact.cshtml
@@ -5,13 +5,13 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    1 Prospect Meadows<br />
+    Rathfarnham, Dublin 16<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    087 1234512
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Support:</strong>   <a href="mailto:Support@example.com">HappyDays@KidsActivities.com</a><br />
+    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">HappyDays@KidsActivities.com</a>
 </address>
