--- a/HappyDaysOne/Views/Activities/Create.cshtml
+++ b/HappyDaysOne/Views/Activities/Create.cshtml
@@ -72,10 +72,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ClubID, "ClubID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Club.ClubName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("ClubID", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.ClubID, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Club.ClubName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Club.ClubName, "", new { @class = "text-danger" })
             </div>
         </div>
 
