--- a/HappyDaysOne/Views/Users/Index.cshtml
+++ b/HappyDaysOne/Views/Users/Index.cshtml
@@ -6,16 +6,52 @@
 @if (ViewBag.displayMenu == "Yes")
 {
     <h1>
-        Welcome Admin. Now you can create user Role.
+        Welcome Admin. You are authorised to access all areas.
     </h1>
-    <h3> 
-        <li>@Html.ActionLink("Manage Role", "Index", "Role")</li>
-    </h3>
+    <div class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
+            <li>@Html.ActionLink("Manage Role", "Index", "Role")</li>
+            <li>@Html.ActionLink("Children", "Index", "Children", new { area = "" }, null)</li>
+            <li>@Html.ActionLink("Clubs", "Index", "Clubs", new { area = "" }, null)</li>
+            <li>@Html.ActionLink("Enrolments", "Index", "Enrolments", new { area = "" }, null)</li>
+            <li>@Html.ActionLink("Activities", "Index", "Activities", new { area = "" }, null)</li>
+            <li>@Html.ActionLink("Instructors", "Index", "Instructors", new { area = "" }, null)</li>
+            <li>@Html.ActionLink("Payments", "Index", "Payments", new { area = "" }, null)</li>
+        </ul>
+        <ul class="nav nav-bar navbar-right">
+            <li>@Html.ActionLink("Activate", "Activate", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
+        </ul>
+
+    </div>
 }
-else
+
+else if (ViewBag.displayMenu == "Club Manager")
 {
-    <h2>  
-        Welcome <strong>@ViewBag.Name</strong> :) .We will add user module soon 
-    </h2>
-}  
+    <h1>
+        Welcome <strong>@ViewBag.Name</strong>.  You can access and edit your Clubs data
+    </h1>
+    <div class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
+            <li>@Html.ActionLink("Club", "Index", "Club")</li>
+            <li>@Html.ActionLink()</li>
+        </ul>
+    </div>
+            }
+
+            <!--@if (ViewBag.displayMenu == "Yes")
+            {
+                <h1>
+                    Welcome Admin. Now you can create user Role.
+                </h1>
+                <h3>
+                    <li>@Html.ActionLink("", "Index", "Role")</li>
+                </h3>
+            }
+            else
+            {
+                <h2>
+                    Welcome <strong>@ViewBag.Name</strong> :) .We will add user module soon
+                </h2>
+            }
+                -->
 
